Fix border-collapse issue

--- a/less/overrides.less
+++ b/less/overrides.less
@@ -147,6 +147,7 @@ nav.navbar.navbar-default.header {
     margin-right  : 15px;
     padding-bottom: 5px;
     padding-top   : 15px;
+		margin-top: -60px;
 }
 
 @media screen and (max-width: 991px) {
